Made settings page

--- a/mockup.html
+++ b/mockup.html
@@ -13,7 +13,7 @@
   <div class="navbar-inner navbar-custom">
     <ul class="nav navbar-custom" id="nav">
         <li><a href="mockup.html">Home</a></li>
-        <li><a href="">New Search</a></li>
+        <li><a href="search.html">New Search</a></li>
         <li><a href="#">Settings</a></li>
       </ul>
     <h1 class="navbar-h1"> Altruist </h1>
