--- a/search.html
+++ b/search.html
@@ -15,6 +15,7 @@
         <li><a href="mockup.html">Home</a></li>
         <li><a href="">New Search</a></li>
         <li><a href="#">Settings</a></li>
+        <li><a href=":;javascript">Minutes: 300</a></li>
       </ul>
     <h1 class="navbar-h1"> Altruist </h1>
     <a class="navbar-brand" href="index.html"> <img class="navbar-img" src="img/sharing.jpg"></a>
